# diffold

./: .dockerignore  .gitignore  Dockerfile.optimized  ENHANCED_TRAINING_GUIDE.md  QUICK_START.md  README_diffold_inference.md  README_integrated_dataloader.md  check_msa_length.py  config.yaml  config_diffold_inference.yaml  config_example.yaml  filter_summary.txt  inference.py  inference_diffold.py  inference_rf.py  mismatch_report.txt  parameters.py  pyproject.toml  run_diffold_inference.sh  test_dataloader.py  test_diffold_simple.py  train.py
diffold/: advanced_optimizers.py  dataloader.py  diffold.py  diffold_to_pdb.py  example_metrics_usage.py  input_processor.py  mask_validator.py  rna_metrics.py  training_config_enhanced.py  training_monitor.py
diffold/docs/: CV_SPLITS_SUMMARY.md  ENHANCED_TRAINING_GUIDE.md  QUICK_START.md  RNA_METRICS_SUMMARY.md  TRAINING_INTEGRATION_SUMMARY.md
example/output/3owzA/: log.txt  results.npz  ss.ct
output/tensorboard/: events.out.tfevents.1751445780.yamanashi.250673.0  events.out.tfevents.1751445831.yamanashi.251120.0  events.out.tfevents.1751446379.yamanashi.251758.0  events.out.tfevents.1751446793.yamanashi.252489.0  events.out.tfevents.1751446817.yamanashi.252918.0
pretrained/: README.md
rhofold/: rhofold.py
scripts/: check_msa_length.py  create_cv_splits.py  create_cv_splits_cdhit.py  extract_sequences.py  filter_data.py
