[project]
name = "rhofold"
version = "0.1.0"
description = "RhoFold project"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core scientific computing
    "numpy>=1.21.2",
    "scipy>=1.7.1",
    "matplotlib>=3.5.3",
    # PyTorch (CUDA support)
    "torch>=1.12.0",
    "torchvision>=0.13.0",
    "torchaudio>=0.12.0",
    # OpenMM for molecular dynamics
    "openmm>=7.7.0",
    # Bioinformatics
    "biopython>=1.79",
    "bio>=1.4.0",
    # RNA structure analysis
    "biotite>=1.4.0",
    "rna-tools>=3.24.0",
    "rnadvisor>=2.0.0",
    "pdanalysis>=0.0.4",
    # Machine learning and data processing
    "einops>=0.5.0",
    "dm-tree>=0.1.7",
    "ml-collections>=0.1.1",
    # Utilities
    "tqdm>=4.62.2",
    "pyyaml>=6.0",
    "requests>=2.26.0",
    "python-box>=6.0.2",
    "python-dateutil>=2.8.2",
    "absl-py>=1.3.0",
    "contextlib2>=21.6.0",
    # Visualization
    "pillow>=9.2.0",
    "fonttools>=4.37.4",
    "cycler>=0.11.0",
    "kiwisolver>=1.4.4",
    "packaging>=21.3",
    "pyparsing>=3.0.9",
    # Bioinformatics clients
    "biothings-client>=0.2.6",
    "mygene>=3.2.2",
    # Standard library backports
    "six>=1.16.0",
    "typing-extensions>=4.4.0",
    # HTTP and certificates
    "certifi>=2022.9.24",
    "charset-normalizer>=2.0.12",
    "idna>=3.4",
    "urllib3>=1.26.12",
    "alphafold3-pytorch>=0.7.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
# If you need specific PyTorch versions with CUDA support, uncomment and modify:
# torch = { index = "https://download.pytorch.org/whl/cu118" }
# torchvision = { index = "https://download.pytorch.org/whl/cu118" }
# torchaudio = { index = "https://download.pytorch.org/whl/cu118" } 